--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,9 @@
     border-top: 3px solid var(--darkBrown);
     border-bottom: 3px solid var(--darkBrown);
     z-index: 1;
+
+    position: absolute;
+    top: 0px;
 }
 
 .container {
