--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,12 +3,9 @@
   justify-content: center;
   align-items: center;
   background-color: var(--darkBrown);
-  width: 100vw;
+  width: var(--mainWidthWeb);
   height: 15px;
   z-index: 1;
-  
-  position: absolute;
-  bottom: 0px;
 }
 
 .footer a {
