--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: var(--mainWidthWeb);
     height: 60px;
     background-color: var(--mediumPink);
     border-top: 3px solid var(--darkBrown);
