--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -1,6 +1,15 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.row {
+  display: flex;
+  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   gap: 10px;
@@ -8,9 +17,10 @@
   height: 100%;
   text-align: center;
   overflow: auto;
+  padding: 0 10px;
 }
 
-.container > div:last-child {
+.row > div:last-child {
   margin-bottom: 20px;
 }
 
@@ -38,7 +48,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  gap: 25px;
+  gap: 20px;
 }
 
 .payment {
@@ -48,7 +58,7 @@
   gap: 25px;
 }
 
-.notes {  
+.notes {
   max-width: 900px;
 }
 
