--- a/src/components/Forms/Checkbox.module.css
+++ b/src/components/Forms/Checkbox.module.css
@@ -10,6 +10,7 @@
   position: relative;
   transition: 0.3s;
   cursor: pointer;
+  line-height: 32px;
 }
 
 .inputGroup label:hover, .inputGroup input:checked + label {
@@ -19,6 +20,7 @@
 .inputGroup label::before {
   border: 2px solid var(--darkCyan);
   position: absolute;
+  top: 8px;
   left: -18px;
   width: 15px;
   height: 15px;
