--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,7 +9,7 @@
     border-bottom: 3px solid var(--darkBrown);
     z-index: 1;
 
-    position: absolute;
+    position: fixed;
     top: 0px;
 }
 
@@ -32,7 +32,7 @@
     border-radius: 20px;
     transition: 0.3s;
     height: 26px;
-    vertical-align: middle;
+    /* vertical-align: middle; */
 }
 
 .navLink {
