--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -39,23 +39,26 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 20px;
+  gap: 25px;
   margin-bottom: 10px;
 }
 
-.form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-  gap: 20px;
-}
-
-.payment {
+.form, .payment, .deliveryAddress {
   display: flex;
   flex-direction: column;
   height: 100%;
   gap: 25px;
+}
+
+.price {
+  font-size: 1.25rem;
+  height: 32px;
+  text-align: end;
+}
+
+.price span {
+  font-size: 1.5rem;
+  color: var(--darkCyan);
 }
 
 .notes {
@@ -67,7 +70,7 @@
     flex-direction: column;
     justify-content: center;
   }
-  .form, .payment {
+  .form, .payment, .deliveryAddress {
     justify-content: flex-end;
     width: 280px;
   }
