--- a/src/components/Easter/Easter.module.css
+++ b/src/components/Easter/Easter.module.css
@@ -9,12 +9,12 @@
   text-align: center;
   overflow: auto;
   padding: 0 10px;
-  padding-bottom: 75px;
+  /* padding-bottom: 75px; */
 }
 
-.container > div:last-child {
+/* .container > div:last-child {
   margin-bottom: 20px;
-}
+} */
 
 .container h3 {
   margin-top: 10px;
