--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -5,7 +5,25 @@
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.row {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     overflow: auto;
+    gap: 20px;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5px;
 }
 
 .container p, .container a {
