removed slider from Home page and added contact information

--- a/src/components/Easter/ModalEasterProduct.module.css
+++ b/src/components/Easter/ModalEasterProduct.module.css
@@ -9,5 +9,8 @@
   top: 0px;
   left: 0px;
   z-index: 10;
-  padding: 10px 40px;
+  padding:calc(var(--HeaderHeigth) + 10px)
+          40px 
+          calc(var(--FooterHeigth) + 10px) 
+          40px;
 }
