Header Products navLink stores last visited route in Product categories

--- a/src/components/Cloche/Cloche.module.css
+++ b/src/components/Cloche/Cloche.module.css
@@ -111,5 +111,10 @@
   z-index: 2;
   font-size: 1rem;
   margin-top: 25px;
+  transition: 0.3s;
   animation: pulse 2s infinite;
+}
+
+.button:hover {
+  color: var(--darkPink);
 }
