--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -7,6 +7,10 @@
     height: 100%;
 }
 
+.container > div:last-child > div:first-child {
+    padding-bottom: calc(var(--HeaderHeigth) + var(--FooterHeigth));
+}
+
 .subNavbar {
     display: flex;
     justify-content: center;
