--- a/src/components/Delivery/Delivery.module.css
+++ b/src/components/Delivery/Delivery.module.css
@@ -3,20 +3,21 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100%;
+    gap: 10px;
     width: 100%;
+    height: 100%;
+    text-align: center;
+    overflow: auto;
+    padding: 0 10px;
 }
 
 .products {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100%;
     gap: 10px;
+    width: 100%;
     flex-wrap: wrap;
-    overflow: auto;
-    padding: 10px 0;
 }
 
 @media (min-width: 40rem) {
