--- a/src/components/Products/ContentProduct.module.css
+++ b/src/components/Products/ContentProduct.module.css
@@ -7,6 +7,7 @@
   border: 2px solid var(--darkBrown);
   border-radius: 10px;
   width: 90%;
+  max-width: 1000px;
   height: 90%;
   padding: 10px;
   gap: 10px;
