--- a/src/pages/ProductsPage/ProductsPage.module.css
+++ b/src/pages/ProductsPage/ProductsPage.module.css
@@ -37,3 +37,13 @@
 .activeProducts, .subNavbar a:hover {
     color: var(--lightPink) !important;
 }
+
+.products {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
