--- a/src/components/Forms/Input.module.css
+++ b/src/components/Forms/Input.module.css
@@ -8,13 +8,13 @@
 
 .input {
   border: 1px solid var(--mediumPink);
-  font-size: 1rem;
+  /* font-size: 1rem; */
+  line-height: 26px;
   padding: 2px 5px;
   border-radius: 5px;
   background: var(--lightPink);
   transition: 0.2s;
   width: 180px;
-  height: 32px;
 }
 
 .input:focus, .input:hover {
