--- a/src/components/Forms/Select.module.css
+++ b/src/components/Forms/Select.module.css
@@ -7,7 +7,7 @@
 
 .select {
   border: 1px solid var(--mediumPink);
-  font-size: 1rem;
+  /* font-size: 1rem; */
   line-height: 26px;
   padding: 2px 5px;
   border-radius: 5px;
