--- a/src/components/Products/ModalProduct.module.css
+++ b/src/components/Products/ModalProduct.module.css
@@ -11,6 +11,6 @@
   z-index: 10;
   padding:calc(var(--HeaderHeigth) + 10px)
           40px 
-          calc(var(--FooterHeigth) + 10px) 
+          calc(var(--FooterHeigth) + 10px + var(--paddingIPhone)) 
           40px;
 }
