--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -1,30 +1,3 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.row {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 10px;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  overflow: auto;
-  padding: 0 10px;
-  /* padding-bottom: 75px; */
-}
-
-/* .row > div:last-child {
-  margin-bottom: 20px;
-} */
-
 .products {
   display: flex;
   justify-content: center;
@@ -55,18 +28,12 @@
   font-size: 1.25rem;
   height: 32px;
   text-align: end;
+  margin-top: 0px;
 }
 
 .price span {
   font-size: 1.5rem;
   color: var(--darkCyan);
-}
-
-.notes {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  max-width: 900px;
 }
 
 @media (max-width: 42rem) {
