--- a/src/index.css
+++ b/src/index.css
@@ -155,6 +155,10 @@ main {
   margin-bottom: 10px;
 }
 
+.wrapper p {
+  width: 100%;
+}
+
 .row {
   display: flex;
   justify-content: center;
@@ -180,8 +184,8 @@ h2 {
 
 h3 {
     color: white;
-    font-size: 1rem;
-    line-height: 2rem;
+    /* font-size: 1rem;
+    line-height: 2rem; */
     text-shadow: 1px 1px 5px #333;
     transition: 0.3s;
 }
